[gd_scene load_steps=3 format=2]

[ext_resource path="res://001_scenes/002_ui/UI.gd" type="Script" id=1]
[ext_resource path="res://002_assets/002_ui/skeleton.png" type="Texture" id=2]

[node name="UI" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="Title" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -86.5017
margin_top = 112.159
margin_right = 89.4983
margin_bottom = 208.159
text = "Fish, bro!"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Score" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -504.0
margin_top = 48.0
margin_right = 504.0
margin_bottom = 69.0
text = "0"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StartButton" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -104.0
margin_top = -52.0
margin_right = 104.0
margin_bottom = 12.0
text = "Start"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="UITimer" type="Timer" parent="."]

[node name="Skeleton1" type="Sprite" parent="." groups=[
"Skeletons",
]]
position = Vector2( 3, 3 )
scale = Vector2( 0.98, 1 )
texture = ExtResource( 2 )
centered = false
__meta__ = {
"_edit_lock_": true
}

[node name="Skeleton2" type="Sprite" parent="." groups=[
"Skeletons",
]]
position = Vector2( 81.4, 3 )
scale = Vector2( 0.98, 1 )
texture = ExtResource( 2 )
centered = false
__meta__ = {
"_edit_lock_": true
}

[node name="Skeleton3" type="Sprite" parent="." groups=[
"Skeletons",
]]
position = Vector2( 159.8, 3 )
scale = Vector2( 0.98, 1 )
texture = ExtResource( 2 )
centered = false
__meta__ = {
"_edit_lock_": true
}

[node name="Skeleton4" type="Sprite" parent="." groups=[
"Skeletons",
]]
position = Vector2( 238.2, 3 )
scale = Vector2( 0.98, 1 )
texture = ExtResource( 2 )
centered = false
__meta__ = {
"_edit_lock_": true
}

[node name="Skeleton5" type="Sprite" parent="." groups=[
"Skeletons",
]]
position = Vector2( 316.6, 3 )
scale = Vector2( 0.98, 1 )
texture = ExtResource( 2 )
centered = false
__meta__ = {
"_edit_lock_": true
}

[node name="Skeleton6" type="Sprite" parent="." groups=[
"Skeletons",
]]
position = Vector2( 395, 3 )
scale = Vector2( 0.98, 1 )
texture = ExtResource( 2 )
centered = false
__meta__ = {
"_edit_lock_": true
}

[node name="Skeleton7" type="Sprite" parent="." groups=[
"Skeletons",
]]
position = Vector2( 473.4, 3 )
scale = Vector2( 0.98, 1 )
texture = ExtResource( 2 )
centered = false
__meta__ = {
"_edit_lock_": true
}

[node name="Skeleton8" type="Sprite" parent="." groups=[
"Skeletons",
]]
position = Vector2( 551.8, 3 )
scale = Vector2( 0.98, 1 )
texture = ExtResource( 2 )
centered = false
__meta__ = {
"_edit_lock_": true
}

[node name="Skeleton9" type="Sprite" parent="." groups=[
"Skeletons",
]]
position = Vector2( 630.2, 3 )
scale = Vector2( 0.98, 1 )
texture = ExtResource( 2 )
centered = false
__meta__ = {
"_edit_lock_": true
}

[node name="Skeleton10" type="Sprite" parent="." groups=[
"Skeletons",
]]
position = Vector2( 708.6, 3 )
scale = Vector2( 0.98, 1 )
texture = ExtResource( 2 )
centered = false
__meta__ = {
"_edit_lock_": true
}

[node name="Skeleton11" type="Sprite" parent="." groups=[
"Skeletons",
]]
position = Vector2( 787, 3 )
scale = Vector2( 0.98, 1 )
texture = ExtResource( 2 )
centered = false
__meta__ = {
"_edit_lock_": true
}

[node name="Skeleton12" type="Sprite" parent="." groups=[
"Skeletons",
]]
position = Vector2( 865.4, 3 )
scale = Vector2( 0.98, 1 )
texture = ExtResource( 2 )
centered = false
__meta__ = {
"_edit_lock_": true
}

[node name="Skeleton13" type="Sprite" parent="." groups=[
"Skeletons",
]]
position = Vector2( 943.8, 3 )
scale = Vector2( 0.98, 1 )
texture = ExtResource( 2 )
centered = false
__meta__ = {
"_edit_lock_": true
}
[connection signal="pressed" from="StartButton" to="." method="_on_StartButton_pressed"]
